log/build_2025-04-07_15-10-39/yyh_object/stderr.log
  File "/home/yyh/ros2_ws/install/yyh_object/lib/python3.8/site-packages/yyh_object/image.py", line 80
    self.get_logger().info("object"))
                                    ^
SyntaxError: unmatched ')'

